<resources>
    <string name="app_name">calculator</string>
    <string name="labelName01">Number 01</string>
    <string name="labelName02">Number 02</string>
    <string name="btn_Plus">+</string>
    <string name="btn_Minus">-</string>
    <string name="btn_Multiply">*</string>
    <string name="btn_Divide">/</string>
    <string name="edit_Number2" />
    <string name="edit_Number1" />
    <string name="answer">Answer</string>
    <string name="labelName04">TextView</string>
    <string name="btn_back">Back</string>
</resources>