<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/labelName01"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="371dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="EditNumber01"
        android:inputType="textPersonName"
        android:text="@string/edit_Number1"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="124dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/labelName02"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="375dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="EditNumber02"
        android:inputType="textPersonName"
        android:text="@string/edit_Number2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/btnMinus"
        android:onClick="buttonClick"
        android:text="@string/btn_Minus"
        android:textSize="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPlus" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFAFCC"
        android:onClick="buttonClick"
        android:text="@string/btn_Plus"
        android:textSize="34dp"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btnMultiply"
        android:onClick="buttonClick"
        android:text="@string/btn_Multiply"
        android:textSize="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/btnDivide"
        android:onClick="buttonClick"
        android:text="@string/btn_Divide"
        android:textSize="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnMultiply"
        app:layout_constraintTop_toTopOf="@+id/btnMultiply" />

</androidx.constraintlayout.widget.ConstraintLayout>